Revert "improve iremprop"
This reverts commit 4ca0dd2d29a9c0fae59927beba4d7f359283140a.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </nav>
 
     <main>
-        <header id="header">
+        <header itemscope itemtype="https://schema.org/LocalBusiness" id="header">
             <figure id="carouselExampleIndicators" class="carousel slide carousel-inner" data-bs-ride="carousel">
                 <picture class="carousel-item active">
                     <source srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash_1-mob.webp" media="(max-width: 768px)">
@@ -220,7 +220,7 @@
 
     <footer>
         <p class="copyright">© Nina Carducci - Tous droits réservés</p>
-        <address itemscope itemtype="https://schema.org/LocalBusiness">
+        <address>
             <p itemprop="name">Nina Carducci</p>
             <p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
                 <span itemprop="streetAddress">68, avenue Alsace-Lorraine - </span>
@@ -229,8 +229,6 @@
             </p>
             <p itemprop="telephone">05 56 67 78 89</p>
             <p itemprop="openingHours" content="Mo-Fr 10:00-19:00">Du lundi au vendredi de 10h à 19h</p>
-            <p itemprop="priceRange" content ="€€€" ></p>
-            <p itemprop="image" content = "https://www.ninacarducci.com/assets/images/nina.webp"></p>
         </address>
     </footer>
 
