update img size

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
    
-    <link rel="preload" href="./assets/style.css" as="style">
+    <link rel="preload" href="./assets/style.min.css" as="style">
     <link rel="preload" href="./assets/scripts.min.js" as="script">
     
 
@@ -30,7 +30,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/style.min.css">
 </head>
 
 <body>
@@ -204,13 +204,14 @@
 
                 <form action="#" method="post">
                     <label for="nom">Nom</label>
-                    <input type="text" name="nom" id="nom">
+                    <input type="text" name="nom" id="nom" autocomplete="name">
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" autocomplete="email">
                     <label for="message">Message</label>
-                    <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                    <textarea name="message" id="message" cols="30" rows="10" autocomplete="message"></textarea>
                     <input type="submit" value="Envoyer">
                 </form>
+                
             </div>
             <figure class="picture right">
                 <img src="./assets/images/camera.webp" alt="Appareil Photo">
