--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </ul>
     </nav>
 
-    <main itemscope itemtype="https://schema.org/LocalBusiness">
+    <main>
         <header id="header">
             <figure id="carouselExampleIndicators" class="carousel slide carousel-inner" data-bs-ride="carousel">
                 <figure class="carousel-item active">
@@ -84,7 +84,7 @@
         </header>
 
         <div id="about">
-            <figure itemprop="image" class="picture left">
+            <figure class="picture left">
                 <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" width="668"
                 height="668">
             </figure>
@@ -138,7 +138,7 @@
             </div>
         </section>
 
-        <section itemprop="priceRange" id="services">
+        <section id="services">
             <h2 class="title">Mes services</h2>
             <ul class="container">
                 <li class="service service__description">
@@ -216,7 +216,7 @@
 
     <footer>
         <p class="copyright">© Nina Carducci - Tous droits réservés</p>
-        <address>
+        <address itemscope itemtype="https://schema.org/LocalBusiness">
             <p itemprop="name">Nina Carducci</p>
             <p itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
                 <span itemprop="streetAddress">68, avenue Alsace-Lorraine - </span>
@@ -225,6 +225,8 @@
             </p>
             <p itemprop="telephone">05 56 67 78 89</p>
             <p itemprop="openingHours" content="Mo-Fr 10:00-19:00">Du lundi au vendredi de 10h à 19h</p>
+            <p itemprop="image" content="./assets/images/nina.webp"></p>
+            <p itemprop="priceRange" content="€€"</p>
         </address>
     </footer>
 
