update minify css

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                 </figure>
 
                 <figure class="carousel-item">
-                    <img loading="lazy" src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1.webp" class="d-block w-100" alt="Deux hommes s'amusant dans une foule à un concert" width="1583" height="732">
+                    <img loading="lazy" src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1.webp" class="d-block w-100" alt="Deux hommes s'amusant dans une foule à un concert">
                 </figure>
 
                 <figure class="carousel-item">
-                    <img loading="lazy" src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Deux mariés s'embrassant pendant leur entrée de bal de leur mariage" width="1583" height="732">
+                    <img loading="lazy" src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Deux mariés s'embrassant pendant leur entrée de bal de leur mariage">
                 </figure>
 
                 <div class="carousel-indicators">
@@ -85,8 +85,7 @@
 
         <div id="about">
             <figure class="picture left">
-                <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" width="668"
-                height="668">
+                <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci">
             </figure>
             <section id="about-me">
                 <h2>A propos de moi</h2>
@@ -209,7 +208,7 @@
                 
             </div>
             <figure class="picture right">
-                <img src="./assets/images/camera.webp" alt="Appareil Photo" width="420" height="420">
+                <img src="./assets/images/camera.webp" alt="Appareil Photo">
             </figure>
         </section>
     </main>
