itemprop update and resiez img camra

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
 </head>
 
-<body itemscope itemtype="https://schema.org/LocalBusiness">
+<body>
     <nav class="top-header">
         <h1>Nina Carducci</h1>
         <ul>
@@ -54,7 +54,7 @@
         <header id="header">
             <figure id="carouselExampleIndicators" class="carousel slide carousel-inner" data-bs-ride="carousel">
                 <figure class="carousel-item active">
-                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Un homme en costume marche dans la rue sur des rayures blanches et grises" width="1532" height="732">
+                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Un homme en costume marche dans la rue sur des rayures blanches et grises">
                 </figure>
 
                 <figure class="carousel-item">
