update for performance

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <header id="header">
             <figure id="carouselExampleIndicators" class="carousel slide carousel-inner" data-bs-ride="carousel">
                 <figure class="carousel-item active">
-                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Un homme en costume marche dans la rue sur des rayures blanches et grises">
+                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Un homme en costume marche dans la rue sur des rayures blanches et grises" width="970" height="450">
                 </figure>
 
                 <figure class="carousel-item">
@@ -85,7 +85,7 @@
 
         <div id="about">
             <figure class="picture left">
-                <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci">
+                <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" width="500" height="500">
             </figure>
             <section id="about-me">
                 <h2>A propos de moi</h2>
@@ -208,7 +208,7 @@
                 
             </div>
             <figure class="picture right">
-                <img src="./assets/images/camera.webp" alt="Appareil Photo">
+                <img src="./assets/images/camera.webp" alt="Appareil Photo" width="400" height="400">
             </figure>
         </section>
     </main>
