--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title> Nina Carducci - Événements & Portraits à Bordeaux</title>
     <link rel="icon" type="images/png" href="./assets/images/favicon.png">
-    <link rel="canonical"  href="https://emelinew1.github.io/P9_Nina_Carducci/">
+    <link rel="canonical"  href="https://github.com/Emeline-Wulstecke/P9_Nina_Carducci">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
     <meta property="og:type" content="website">
     <meta name="author" content="Nina Carducci" />
     <meta property="og:title" content="Nina Carducci">
-    <meta property="og:url" content="https://emelinew1.github.io/P9_Nina_Carducci/">
+    <meta property="og:url" content="https://github.com/Emeline-Wulstecke/P9_Nina_Carducci">
     <meta property="og:description"
         content="Photographe professionnelle spécialisée dans les événements, les portraits & les mariages. Basé à Bordeaux, découvrez mon portfolio & réservez votre séance.">
     <meta property="og:image" content="assets/images/nina.webp">
@@ -44,7 +44,7 @@
             <li><a href="#contact">Contact</a></li>
             <li>
                 <a href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" class="social-link">
-                    <img src="assets/images/instagram.webp" alt="Logo instagram">
+                    <img src="assets/images/instagram.webp" alt="Logo instagram" loading="lazy">
                 </a>
             </li>
         </ul>
@@ -54,7 +54,7 @@
         <header id="header">
             <figure id="carouselExampleIndicators" class="carousel slide carousel-inner" data-bs-ride="carousel">
                 <figure class="carousel-item active">
-                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Un homme en costume marche dans la rue sur des rayures blanches et grises" width="970" height="450">
+                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Un homme en costume marche dans la rue sur des rayures blanches et grises" width="970" height="450" loading="lazy">
                 </figure>
 
                 <figure class="carousel-item">
@@ -85,7 +85,7 @@
 
         <div id="about">
             <figure class="picture left">
-                <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" width="500" height="500">
+                <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" width="500" height="500" loading="lazy">
             </figure>
             <section id="about-me">
                 <h2>A propos de moi</h2>
@@ -116,11 +116,11 @@
                 <img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portait d'entreprise d'un homme en costume">
                 <img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt=" Femme qui rit pendant une reunion">
                 <img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt=" Zoom sur des mains de mariés">
-                <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt=" Portrait d'un homme qui ferme les yeux">
-                <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Mariés en train de marcher et de rire ensemble">
-                <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portait d'une jeune femme portant des lunettes">
-                <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Un chanteur pendant son concert">
-                <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Portrait d'une femme rigolant devant son ordinateur">
+                <img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt=" Portrait d'un homme qui ferme les yeux">
+                <img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Mariés en train de marcher et de rire ensemble">
+                <img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portait d'une jeune femme portant des lunettes">
+                <img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Un chanteur pendant son concert">
+                <img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Portrait d'une femme rigolant devant son ordinateur">
             </figure>
 
             <div class="quote">
