--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
         <header id="header">
             <figure id="carouselExampleIndicators" class="carousel slide carousel-inner" data-bs-ride="carousel">
                 <figure class="carousel-item active">
-                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Un homme en costume marche dans la rue sur des rayures blanches et grises" width="970" height="450" loading="lazy">
+                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Un homme en costume marche dans la rue sur des rayures blanches et grises" width="970" height="450">
                 </figure>
 
                 <figure class="carousel-item">
-                    <img loading="lazy" src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1.webp" class="d-block w-100" alt="Deux hommes s'amusant dans une foule à un concert">
+                    <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1.webp" class="d-block w-100" alt="Deux hommes s'amusant dans une foule à un concert">
                 </figure>
 
                 <figure class="carousel-item">
-                    <img loading="lazy" src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Deux mariés s'embrassant pendant leur entrée de bal de leur mariage">
+                    <img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Deux mariés s'embrassant pendant leur entrée de bal de leur mariage">
                 </figure>
 
                 <div class="carousel-indicators">
