amend: head preload added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
    
     <link rel="preload" href="./assets/style.min.css" as="style">
     <link rel="preload" href="./assets/scripts.min.js" as="script">
-    
+    <link rel="preload" href="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" as="image">
+    <link rel="preload" href="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1.webp" as="image">
+    <link rel="preload" href="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" as="image">
 
     <meta name="description"
         content="Photographe professionnelle spécialisée dans les événements, les portraits & les mariages. Basé à Bordeaux, découvrez mon portfolio & réservez votre séance.">
