--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-   
     <link rel="preload" href="./assets/style.min.css" as="style">
     <link rel="preload" href="./assets/scripts.min.js" as="script">
     <link rel="preload" href="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" as="image">
@@ -30,14 +29,13 @@
         content="Photographe professionnelle spécialisée dans les événements, les portraits & les mariages. Basé à Bordeaux, découvrez mon portfolio & réservez votre séance.">
     <meta property="og:image" content="assets/images/nina.webp">
     
-    <link rel="stylesheet" href="./assets/style.min.css">
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-    
+    <link rel="stylesheet" href="./assets/style.min.css">
 </head>
 
 <body>
     <nav class="top-header">
-        <h1>Nina Carducci</h1>
+        <h1>Nina Carducci</h1
         <ul>
             <li><a href="#about">À propos</a></li>
             <li><a href="#gallery">Galerie</a></li>
@@ -230,10 +228,9 @@
         </address>
     </footer>
 
-
-    <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="./assets/maugallery.min.js"></script>
     <script src="./assets/scripts.min.js"></script>
 </body>
