--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title> Nina Carducci - Événements & Portraits à Bordeaux</title>
     <link rel="icon" type="images/png" href="./assets/images/favicon.png">
-    <link rel="canonical"  href="https://github.com/Emeline-Wulstecke/P9_Nina_Carducci">
+    <link rel="canonical" href="https://github.com/Emeline-Wulstecke/P9_Nina_Carducci">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,14 +28,14 @@
     <meta property="og:description"
         content="Photographe professionnelle spécialisée dans les événements, les portraits & les mariages. Basé à Bordeaux, découvrez mon portfolio & réservez votre séance.">
     <meta property="og:image" content="assets/images/nina.webp">
-    
+
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/style.min.css">
 </head>
 
 <body>
     <nav class="top-header">
-        <h1>Nina Carducci</h1
+        <h1>Nina Carducci</h1>
         <ul>
             <li><a href="#about">À propos</a></li>
             <li><a href="#gallery">Galerie</a></li>
@@ -53,29 +53,38 @@
         <header id="header">
             <figure id="carouselExampleIndicators" class="carousel slide carousel-inner" data-bs-ride="carousel">
                 <figure class="carousel-item active">
-                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="Un homme en costume marche dans la rue sur des rayures blanches et grises" width="970" height="450">
+                    <img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100"
+                        alt="Un homme en costume marche dans la rue sur des rayures blanches et grises" width="970"
+                        height="450">
                 </figure>
 
                 <figure class="carousel-item">
-                    <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1.webp" class="d-block w-100" alt="Deux hommes s'amusant dans une foule à un concert">
+                    <img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash_1.webp" class="d-block w-100"
+                        alt="Deux hommes s'amusant dans une foule à un concert">
                 </figure>
 
                 <figure class="carousel-item">
-                    <img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="Deux mariés s'embrassant pendant leur entrée de bal de leur mariage">
+                    <img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100"
+                        alt="Deux mariés s'embrassant pendant leur entrée de bal de leur mariage">
                 </figure>
 
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
                 </div>
 
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Précédent</span>
                 </button>
 
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Suivant</span>
                 </button>
@@ -84,7 +93,8 @@
 
         <div id="about">
             <figure class="picture left">
-                <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" width="500" height="500" loading="lazy">
+                <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci" width="500" height="500"
+                    loading="lazy">
             </figure>
             <section id="about-me">
                 <h2>A propos de moi</h2>
@@ -111,29 +121,46 @@
         <section id="gallery">
             <h2 class="title">Portfolio</h2>
             <figure class="gallery container py-3" style="display: none">
-                <img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt=" Photo prise pendant un concert, lumières rouges">
-                <img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portait d'entreprise d'un homme en costume">
-                <img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt=" Femme qui rit pendant une reunion">
-                <img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt=" Zoom sur des mains de mariés">
-                <img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt=" Portrait d'un homme qui ferme les yeux">
-                <img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Mariés en train de marcher et de rire ensemble">
-                <img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portait d'une jeune femme portant des lunettes">
-                <img loading="lazy" data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Un chanteur pendant son concert">
-                <img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Portrait d'une femme rigolant devant son ordinateur">
+                <img loading="lazy" data-gallery-tag="Concert" class="gallery-item"
+                    src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+                    alt=" Photo prise pendant un concert, lumières rouges">
+                <img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item"
+                    src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
+                    alt="Portait d'entreprise d'un homme en costume">
+                <img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item"
+                    src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
+                    alt=" Femme qui rit pendant une reunion">
+                <img loading="lazy" data-gallery-tag="Mariages" class="gallery-item"
+                    src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+                    alt=" Zoom sur des mains de mariés">
+                <img loading="lazy" data-gallery-tag="Portrait" class="gallery-item"
+                    src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+                    alt=" Portrait d'un homme qui ferme les yeux">
+                <img loading="lazy" data-gallery-tag="Mariages" class="gallery-item"
+                    src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
+                    alt="Mariés en train de marcher et de rire ensemble">
+                <img loading="lazy" data-gallery-tag="Portrait" class="gallery-item"
+                    src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
+                    alt="Portait d'une jeune femme portant des lunettes">
+                <img loading="lazy" data-gallery-tag="Concert" class="gallery-item"
+                    src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
+                    alt="Un chanteur pendant son concert">
+                <img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item"
+                    src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+                    alt="Portrait d'une femme rigolant devant son ordinateur">
             </figure>
 
-            <div class="quote">
-                <figure>
-                    <blockquote class="quote__text">
-                        Un portrait n’est pas une ressemblance. Dès lors qu’une émotion
-                        ou qu’un fait est traduit en photo, il cesse d’être un fait pour
-                        devenir une opinion. L’inexactitude n’existe pas en
-                        photographie. Toutes les photos sont exactes. Aucune d’elles
-                        n’est la vérité.
-                    </blockquote>
-                    <figcaption class="quote__author">- Richard Avedon</figcaption>
-                </figure>
-            </div>
+
+            <figure class="quote">
+                <blockquote class="quote__text">
+                    Un portrait n’est pas une ressemblance. Dès lors qu’une émotion
+                    ou qu’un fait est traduit en photo, il cesse d’être un fait pour
+                    devenir une opinion. L’inexactitude n’existe pas en
+                    photographie. Toutes les photos sont exactes. Aucune d’elles
+                    n’est la vérité.
+                </blockquote>
+                <figcaption class="quote__author">- Richard Avedon</figcaption>
+            </figure>
         </section>
 
         <section id="services">
@@ -177,18 +204,14 @@
             </ul>
         </section>
 
-        <article class="quote">
-            <figure>
-                <blockquote>
-                    <h2 class="quote__text">
-                        De manière inconsciente, je crois, je guette un regard, une
-                        expression, des traits ou une nostalgie capable de résumer ou plus
-                        exactement de révéler une vie
-                    </h2>
-                </blockquote>
-                <figcaption class="quote__author">- Richard Avedon</figcaption>
-            </figure>
-        </article>
+        <figure class="quote">
+            <blockquote class="quote__text">
+                De manière inconsciente, je crois, je guette un regard, une
+                expression, des traits ou une nostalgie capable de résumer ou plus
+                exactement de révéler une vie
+            </blockquote>
+            <figcaption class="quote__author">- Richard Avedon</figcaption>
+        </figure>
 
         <section id="contact">
             <div class="container form-container">
@@ -204,7 +227,7 @@
                     <textarea name="message" id="message" cols="30" rows="10" autocomplete="message"></textarea>
                     <input type="submit" value="Envoyer">
                 </form>
-                
+
             </div>
             <figure class="picture right">
                 <img src="./assets/images/camera.webp" alt="Appareil Photo" width="400" height="400">
@@ -224,14 +247,15 @@
             <p itemprop="telephone">05 56 67 78 89</p>
             <p itemprop="openingHours" content="Mo-Fr 10:00-19:00">Du lundi au vendredi de 10h à 19h</p>
             <p itemprop="image" content="./assets/images/nina.webp"></p>
-            <p itemprop="priceRange" content="€€"</p>
+            <p itemprop="priceRange" content="€€" </p>
         </address>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
     <script src="./assets/maugallery.min.js"></script>
     <script src="./assets/scripts.min.js"></script>
 </body>
+
 </html>
