amend: css html improved

--- a/index.html
+++ b/index.html
@@ -78,15 +78,13 @@
                 </div>
 
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Précédent</span>
+                    data-bs-slide="prev" aria-label="precedent">
+                    <span class="carousel-control-prev-icon" aria-hidden="true" ></span>
                 </button>
 
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Suivant</span>
+                    data-bs-slide="next" aria-label="suivant">
+                    <span class="carousel-control-next-icon" aria-hidden="true" ></span>
                 </button>
             </figure>
         </header>
