--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
                 <span itemprop="streetAddress">68, avenue Alsace-Lorraine - </span>
                 <span itemprop="postalCode">33200</span>
                 <span itemprop="addressLocality">Bordeaux</span>
+                <span itemprop="addressCountry">France</span>
             </p>
             <p itemprop="telephone">05 56 67 78 89</p>
             <p itemprop="openingHours" content="Mo-Fr 10:00-19:00">Du lundi au vendredi de 10h à 19h</p>
